Remove MaxPermSize since we require Java 8 JVM (#3370)